--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde_json = "1.0"
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 tokio   = { version = "1",   features = ["full"] }
 futures = "0.3.31"
+rayon = "1.11.0"
