--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 log = "0.4.28"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", features = ["blocking", "json"] }
 tokio   = { version = "1",   features = ["full"] }
 futures = "0.3.31"
 rayon = "1.11.0"
